--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,22 @@
-name: Generate Snake Animation
+name: Generate Snake
 
 on:
-  schedule: 
-    - cron: "0 0 * * *" # Executa uma vez por dia à meia-noite UTC
-  workflow_dispatch:
+  schedule:
+    - cron: "0 9 * * *" 
+  workflow_dispatch: 
 
 jobs:
-  build:
-    name: Generate Snake Animation
+  generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate Snake Animation
+      - name: Generate the snake animation
         uses: Platane/snk@v2
         with:
-          github_user_name: "DandaraEmiliano"
+          github_user_name: ${{ github.repository_owner }}
           outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: Push the animation to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
