--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
+    env:
+      ACTIONS_STEP_DEBUG: true 
     steps:
       - name: Generate the snake animation
         uses: Platane/snk@v2
